# django-viewcomponent

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: python-publish.yml  runtests.yml
docs/: requirements.txt
docs/source/: articles.md  conf.py  context.md  faq.md  getting_started.md  index.rst  install.md  namespace.md  overview.md  preview.md  slot.md  templates.md  testing.md  use_components_in_python.md
src/django_viewcomponent/: __init__.py  app_settings.py  apps.py  component.py  component_registry.py  fields.py  loaders.py  preview.py  urls.py  views.py
src/django_viewcomponent/templates/django_viewcomponent/: base.html  index.html  preview.html  previews.html
src/django_viewcomponent/templates/view_components/: index.html  preview.html  previews.html
src/django_viewcomponent/templatetags/: viewcomponent_tags.py
tests/: conftest.py  test_component.py  test_context.py  test_layout.py  test_preview.py  test_registry.py  test_render_field.py  test_tags.py  utils.py
tests/previews/: simple_preview.py
tests/templates/: conditional_template.html  extendable_template_with_blocks.html  if_variable_template.html  includes.html  nested_slot_template.html  simple_template.html  slotted_component_nesting_template_pt1_calendar.html  slotted_component_nesting_template_pt2_dashboard.html  slotted_template.html  slotted_template_with_missing_variable.html  template_with_conditional_slots.html  template_with_if_elif_else_conditional_slots.html  template_with_illegal_slot.html  template_with_nonunique_slots.html
tests/templates/layout/: button.html  div.html
tests/testapp/: layout.py  models.py  urls.py
tests/testapp/components/testapp/example/: example.html  example.py
